api-manager/v/2.x/gatekeeper.adoc
= Gatekeeper Enhanced Security Reference

When you deploy an application, there could be a window of time during which the APIs exposed by the application are accessible, but the policies specified for those APIs are not yet applied so unwelcome traffic may reach the APIs.GateKeeper prevents this situation by blocking the API until all policies have been retrieved and applied without errors. During this period, the API returns a 503 status. 

== How Gatekeeper Works

After Mule Runtime detects you deployed an application for the first time, and the exposed API is running, all tracked listeners (flows having auto-discovery set up) are stopped. Gatekeeper blocks the API and returns a 503 (Service Unavailable) status code until the following conditions are met:

* Connection is made to API Manager.
* Policies are downloaded.
* Policies are applied successfully.

The Mule Runtime then caches all policies locally.
 
To enable or disable GateKeeper functionality, you can configure the following property in the Mule `wrapper.conf` file with different security levels:

Property name: `anypoint.platform.gatekeeper`

== Security Levels

You can configure security levels to enable or disable Gatekeeper functionality. In the Mule `wrapper.conf` file configure the gatekeeper property as shown in the following example:

----
 #On-Prem Configuration: 
 ...
 wrapper.java.additional.<n>=-Danypoint.platform.gatekeeper=flexible
 ...
----

* Valid Values for Mule 4 Security Levels
** `strict`
** `flexible`
** `disabled`

* Valid Values for Mule 3 Security Levels
** `true`
** `false`
** `strict`
** `flexible`

=== Security Level Definitions

The following security levels are defined for Gatekeeper.

=== False

When this value is set, no security is applied. Unwelcome traffic may reach the APIs during the policies application process. This value is available only for backwards compatibility. This value is available only for backward compatibility in Mule 3.x. Use ‘disabled’ instead. `disabled` is not available in all 3.x releases. `false` is not available in Mule 4.x.

=== Disabled

When this value is set, no security is applied. Unwelcome traffic may reach the APIs during the policies application process.

=== True

When this value is set, the default security level is Strict. This value is available only for backward compatibility in Mule 3.x. Use ‘strict’ or ‘flexible’ instead. `true` is navailable in Mule 4.x

=== Strict

When this value is set, GateKeeper security is on and it works as described in "How Gatekeeper Works."

*Note:* Each Mule Runtime version has different defaults as described in <<Default Gatekeeper Configuration>>. If the
Mule Runtime you're using defaults to Strict, then when the Mule Runtime is restarted, the API is blocked and returns a 503 (Service Unavailable), until the conditions listed in "How Gatekeeper Works" are met once again.

=== Flexible

When this value is set, GateKeeper security is on and it works as described in "How Gatekeeper Works."

If Mule Runtime is restarted, Gatekeeper blocks the API, returning a 503 (Service Unavailable). Mule Runtime first checks if it can retrieve the policies from API Manager, and in case of being unable to retrieve them, it checks the local cache. If neither API Manager nor cache are available, the API remains blocked until the conditions listed in "How Gatekeeper Works" are met once again.

If the API is deleted in API Manager, Gatekeeper blocks the API in the next polling cycle. If Mule Runtime is running in cluster mode, the primary node block sthe API in the next polling cycle, and notifies the other nodes.

=== Default Gatekeeper Configuration

By default, Mule releases are configured as follows:

* Mule Runtime 3.8.5: Strict
* Mule Runtime 3.8.6: Flexible
* Mule Runtime 3.9.0: Strict
* Mule Runtime 3.9.1: Flexible
* Mule Runtime 4.0.0: Strict
* Mule Runtime 4.1.0: Flexible
* Mule Runtime 4.1.1 and later: Flexible

== See Also

* link:/api-manager/v/2.x/gatekeeper-task[To Enable Gatekeeper]
